--- a/.gitignore
+++ b/.gitignore
@@ -362,4 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-Backend\Booking System\Booking System\booking_system.db
+Backend/Booking System/Booking System/booking_system.db
